tests/invalid/redeclaration_of_symbol.ar
fn main() 
{

}

fn redecl_var(n: usize)
{
    let n = n;
}
